:bug: [fix] gamestyle 수정